# my_rust_framework

framework/: Cargo.toml  README.md
framework/src/: auth.rs  lib.rs  prelude.rs  rate_limiter.rs  structs.rs
starter/: Cargo.toml
starter/.agent/workflows/: create-route.md
starter/.sqlx/: query-2be18db9044c3646b5ec82cedd43656f2590155c27d1078a2094cabcc9217f7e.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-79d6ec6e0c3275438cf735d6637075398cb2e188b4d55df37eff9d7cabc4dd5f.json  query-a4821a27a4f2a9662ba6234e4ab77093378c0235e7dc51960e0315ae94766d15.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
starter/src/frontend/src/components/: Sidebar.astro
starter/src/services/: index.rs  login.rs  register.rs  users.rs
