[package]
name = "my_rust_framework"
version = "0.0.2"
edition = "2024"
description = "A lightweight, opinionated Rust web framework built on top of Actix-web, SQLx, and Tera."
license = "MIT OR Apache-2.0"
repository = "https://github.com/StevenUster/my_rust_framework"
readme = "README.md"
keywords = ["web", "framework", "actix-web", "sqlx", "tera"]
categories = ["web-programming"]

[lib]
name = "my_rust_framework"
path = "src/lib.rs"

[dependencies]
actix-web = "4.12.1"
actix-governor = "0.10.0"
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
tera = "1.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
dotenv = "0.15.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"
env_logger = "0.11.8"
log = "0.4.29"
rust-argon2 = "3.0.0"
rand = "0.9.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
thiserror = "2.0.18"
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
