[package]
name = "starter"
version = "0.0.2"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
rusty-money = "0.5.0"
actix-web = "4.12.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
dotenv = "0.15.0"
# my_rust_framework = "0.0.2"
my_rust_framework = { path = "../framework" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
